# robot

./: README.md
base/: CMakeLists.txt  package.xml
base/firmware/: CMakeLists.txt  arduino_fw.cpp
cad/: arduino nano.SLDPRT  arduino-nano-mount.SLDPRT  battery.SLDPRT  buck-drivetrain.SLDPRT  camera.SLDPRT  caster.SLDPRT  chassis.SLDPRT  computer-buck.SLDPRT  fig.SLDASM  imu.SLDPRT  jetson.SLDPRT  l298.SLDPRT  lidar-adapter.SLDPRT  lidar.SLDPRT  motor-and-encoder.SLDPRT  motor-bracket.SLDPRT  robot.SLDASM  switch.SLDPRT  wheel.SLDPRT
cad/3d print/: arduino-nano-mount.SLDPRT  camera-mount.SLDPRT  caster-spacer 2.SLDPRT  caster-spacer.SLDPRT  switch-mount.SLDPRT
cad/3d print/export stl/: arduino-nano-mount.STL  camera-mount.STL  caster-spacer 2.STL  caster-spacer.STL  switch-mount.STL
cad/3d print/export stl/old/: camera-mount-slide-fit.STL
cad/3d print/old/: camera-mount-slide-fit-old.SLDPRT  camera-mount-slide-fit.SLDPRT  camera-mount-snap-fit.SLDPRT
cad/export dwg/: chassis-base.DWG  chassis-base.bak  chassis-mid.DWG  chassis-mid.bak  chassis-top-v2.DWG  chassis-top-v2.bak  chassis-top.DWG  chassis-top.bak
cad/ext parts/: 6-32 standoff ff.SLDPRT  M2 Standoff mf.SLDPRT  M3 Standoff mf.SLDPRT
firmware/: firmware.ino
fw/: fw.ino
robot_base/: CMakeLists.txt  package.xml
robot_base/cfg/: Setpoint.cfg
robot_base/launch/: README.md  base.launch  drive_base.launch  gazebo.launch  hw_base.launch  hw_control.launch  robot_hw.launch  sensors_base.launch  tune_pid.launch
robot_base/param/: diff_drive.yaml  robot_base.yaml
robot_base/rviz/: urdf.rviz
robot_base/src/: .serial.cpp.swp  base.cpp  serial.cpp
robot_base/urdf/: robot.xacro
robot_base/util/: setpoint_pub.py
robot_constants/: CMakeLists.txt  package.xml
robot_constants/include/: robot_constants.h
robot_constants/include/robot_constants/: nodes.h  params.h  topics.h
robot_control/: CMakeLists.txt  package.xml
robot_control/launch/: teleop-master.launch  teleop-remote.launch  teleop.launch
robot_control/param/: robot_base.yaml
robot_control/rviz/: teleop.rviz
robot_description/: CMakeLists.txt  package.xml
robot_description/meshes/: rplidar_main.STL
robot_description/urdf/: materials.xacro  robot.gazebo.xacro  robot.urdf.xacro  robot.xacro
robot_firmware/: robot_firmware.ino
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/launch/: gazebo.launch
robot_gazebo/worlds/: rooms.world
