<?xml version="1.0"?>
<package format="2">
  <name>robot_constants</name>
  <version>0.0.0</version>
  <description>The robot_constants package</description>

  <maintainer email="feilan@todo.todo">feilan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
